# ConvoxAI

./: .gitignore  README.md  pyproject.toml  setup.py
Backend/: .gitignore  config.py  main.py  pyproject.toml  requirements.txt  setup.py  test_supabase_connection.py
Backend/api/: app.py  auth.py  chat_history.py  chat_query.py  storage.py
Backend/convoxai/: config.py
Backend/convoxai/api/: app.py  auth.py  chat_history.py  chat_query.py  storage.py
Backend/convoxai/core/: chatbot.py  models.py  summarizer.py
Backend/convoxai/core/prompts/: templates.py
Backend/convoxai/prompts/: templates.py
Backend/convoxai/utils/: audio.py  embeddings.py  supabase_client.py  text_processing.py  vector_store.py
Backend/core/: chatbot.py  summarizer.py
Backend/core/prompts/: templates.py
Backend/database/: schema.sql  storage_policies.sql
Backend/scripts/: run_dev.py  test_api_client.py
Backend/utils/: audio.py  auth_helpers.py  db_helpers.py  embeddings.py  supabase_client.py  text_processing.py  validation.py  vector_store.py
Frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json
Frontend/src/: App.tsx  index.css  main.tsx
Frontend/src/components/: call-summarizer.tsx  chat-interface.tsx  dashboard.tsx  protected-route.tsx  public-route.tsx  sidebar.tsx  user-profile.tsx
Frontend/src/components/auth/: auth-page.tsx  login-form.tsx  signup-form.tsx
Frontend/src/contexts/: auth-context.tsx
Frontend/src/lib/: api.ts  supabase.ts
Frontend/src/types/: api.ts
