[project]
name = "convoxai"
version = "0.1.0"
description = "AI-Powered Call Summarization using RAG"
authors = [
    { name = "Dhruv Agarwal", email = "dhruv610agg@gmail.com" },
    { name = "Ayush Sharma", email = "ayushsharma130408@gmail.com" },
    { name = "Aniket Shah", email = "aniketshah2402@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "langchain>=0.3.18",
    "langchain-core>=0.3.30",
    "langchain-community>=0.3.18",
    "langchain-groq>=0.2.3",
    "langchain-pinecone>=0.2.1",
    "langchain-google-genai>=2.0.8",
    "python-dotenv>=1.0.0",
    "streamlit>=1.40.0",
    "pydantic>=2.10.0",
    "sentence-transformers>=3.3.0",
    "huggingface-hub>=0.27.0",
    "faster-whisper>=1.1.0",
    "pydub>=0.25.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.20",
    "pytest>=9.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["convoxai"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
